# ubumuntu

./: CONTRIBUTING.md  README.md  THERAPY_TRANSFORMATION_PLAN.md  package.json  sst.config.ts
apps/expo/: app.config.ts
apps/expo/src/app/(app)/: dashboard.tsx
apps/expo/src/app/(therapy)/: _layout.tsx  exercises.tsx  index.tsx  progress.tsx
apps/expo/src/app/(therapy)/exercise/: [id].tsx
apps/expo/src/components/auth/: otp-verification.tsx  reset-password-form.tsx  reset-password-verification-form.tsx  signin-form.test.tsx  signin-form.tsx
apps/expo/src/components/notes/: render-content.tsx
apps/expo/src/lib/: constants.ts
apps/expo/src/utils/: base-url.tsx
apps/fastapi/: .env.example  Dockerfile  README.md  app.py  index.py  pyproject.toml  railway.json  render.yaml  requirements.txt
apps/fastapi/api/: config.py  index.py  main.py
apps/fastapi/api/endpoints/v1/: api.py
apps/fastapi/api/endpoints/v1/analytics/: __init__.py
apps/fastapi/api/endpoints/v1/auth/: verify.py
apps/fastapi/api/endpoints/v1/processing/: ai_feedback.py  pronunciation_analysis.py  therapy_asr.py  therapy_tts.py
apps/fastapi/api/endpoints/v1/routers/: analytics.py  therapy.py
apps/fastapi/api/endpoints/v1/therapy/: __init__.py
apps/nextjs/: README.md  vercel.json
apps/nextjs/src/: env.ts
apps/nextjs/src/app/: layout.tsx  page.tsx
apps/nextjs/src/app/(app)/analytics/: page.tsx
apps/nextjs/src/components/: navbar.tsx  sidebar.tsx
apps/nextjs/src/components/shared/: back-button.tsx
apps/nextjs/src/config/: nav.ts
apps/nextjs/src/lib/: exercise-storage.ts
(+10 files in other folders)
